# uni-labs-automation

./: README.md  organize.sh
lab_templ/: 0test.sh  1build.sh  2run.sh  3docx.sh  CMakeLists.txt  clang-uml.yml
lab_templ/report/: lab-number.txt
lab_templ/src/: main.cpp
packy/: packy.py
packy/database/: labs.db
packy/functions_packy/: auto_report.py  file_manage.py  packy_functions.py  tests_generation.py
